# idna2008

./: .gitignore  CHANGELOG.md  LICENSE  README.md  idna2008.cabal
.github/workflows/: ci.yml
internal-punycode/Text/IDNA2008/Internal/: Punycode.hs
internal/Text/IDNA2008/Internal/: Bidi.hs  Case.hs  Combining.hs  Domain.hs  Emoji.hs  Error.hs  Flags.hs  Joining.hs  LabelForm.hs  LabelFormSet.hs  LabelInfo.hs  NFC.hs  Parse.hs  Property.hs  Ranges.hs  Script.hs  Tokens.hs  UTS46.hs  Util.hs  Width.hs
internal/Text/IDNA2008/Internal/Bidi/: Data.hs
internal/Text/IDNA2008/Internal/Case/: Data.hs
internal/Text/IDNA2008/Internal/Combining/: Data.hs
internal/Text/IDNA2008/Internal/Emoji/: Data.hs
internal/Text/IDNA2008/Internal/Joining/: Data.hs
internal/Text/IDNA2008/Internal/NFC/: Data.hs  Tables.hs
internal/Text/IDNA2008/Internal/NFC/Tables/: Data.hs
internal/Text/IDNA2008/Internal/Property/: Data.hs
internal/Text/IDNA2008/Internal/Script/: Data.hs
internal/Text/IDNA2008/Internal/Width/: Data.hs
internal/tools/: genIdnaBidi.py  genIdnaCombining.py  genIdnaDerive.py  genIdnaEmoji.py  genIdnaJoining.py  genIdnaNFC.py  genIdnaNFCTables.py  genIdnaProperty.py  genIdnaScript.py  genIdnaSimpleLower.py  genIdnaWidth.py  update
src/Text/: IDNA2008.hs
src/Text/IDNA2008/: Wire.hs
tests/: README.md  conformance.hs  punycode.hs  unicode_conformance.hs  vectors.json
tests/data/: idna-test-v2-expected-diffs.txt
